--- a/part7/refactor-bloglist/bloglist-frontend-refactor/src/App.css
+++ b/part7/refactor-bloglist/bloglist-frontend-refactor/src/App.css
@@ -6,14 +6,14 @@
   font-size: 14px;
 }
 
-a {
+/* a {
   color: gray;
 }
 
 a:hover {
   color: #777;
   border-bottom: 1px solid #777;
-}
+} */
 
 a:link {
   text-decoration: none;
@@ -194,7 +194,9 @@ input[type="password"] {
   text-transform: capitalize;
 }
 
-.blog-list-title span {
+.blog-list-title span,
+.blog-style .blog-span {
+  font-weight: bold;
   color: #222;
 }
 
